# catena

./: .gitignore  AGENTS.md  README.md  alembic.ini  mise.toml  pyproject.toml
apps/web/: .env.example  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/ask/: page.tsx
apps/web/app/discover/: page.tsx
apps/web/app/papers/: page.tsx
apps/web/app/similarity/: page.tsx
apps/web/app/tables/: page.tsx
apps/web/app/tables/[tableId]/: page.tsx  (+1 more)
apps/web/app/tags/: page.tsx
apps/web/components/: app-nav.tsx  app-shell.tsx  empty-state.tsx  nav-link.tsx  page-header.tsx  stat-card.tsx  upload-dropzone.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  icon-button.tsx  input.tsx  select.tsx  textarea.tsx
apps/web/lib/: api.ts  store.ts  utils.ts
baml_src/: clients.baml  extraction.baml  generators.baml
src/catena/: __init__.py  __main__.py  api.py  cli.py  config.py  db.py  embeddings.py  extraction.py  filters.py  library.py  metadata.py  models.py  parsing.py  qa.py  search.py  similarity.py  util.py  vector.py
src/catena/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
src/catena/migrations/: __init__.py  env.py
src/catena/migrations/versions/: 20260617_0001_initial_schema.py  20260617_0002_paper_similarity.py  20260619_0003_table_source_path.py  20260619_0004_search_fts.py
src/catena/templates/: SKILL.md  catena.toml.example
tests/: test_api.py  test_cli.py  test_config.py  test_library.py  test_parsing.py
