[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "catena"
version = "0.1.0"
description = "Local evidence-backed paper extraction tables"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{ name = "catena contributors" }]
dependencies = [
    "alembic>=1.17.0",
    "baml-py>=0.203.1,<0.204",
    "docling>=2.64.0",
    "fastapi>=0.124.0",
    "httpx>=0.28.0",
    "lancedb>=0.25.0",
    "openai>=2.8.0",
    "pydantic>=2.12.0",
    "python-multipart>=0.0.20",
    "rich>=14.2.0",
    "sqlmodel>=0.0.27",
    "typer>=0.20.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
]

[project.scripts]
catena = "catena.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/catena"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/catena/baml_client"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
